HTML changes, added photos subdir, DS_STORE included in commit.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-<p>May Johnson</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>May Johnson's Dog Reviews</title>
+   </head>
+
+   <body>
+       <header>
+        <h1>May Johnson's Official Unofficial Dog Reviews</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#shibainu">Shiba Inu</a>
+                </li>
+                <li>
+                    <a href="#corgi">Corgi</a>
+                </li>
+                <li>
+                    <a href="#samoyed">Samoyed</a>
+                </li>
+                <li>
+                    <a href="#chihuahua">Chihuahua</a>
+                </li>
+                <li>
+                    <a href="#yorkie">Yorkie</a>
+                </li>
+                <li>
+                    <a href="#pug">Pug</a>
+                </li>
+                <li>
+                    <a href="#husky">Husky</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <a name="shibainu"></a>
+                <h2>Shiba Inu</h2>
+                <h3>Overall Score: 9/10</h3>
+                <p>9/10 because cute and self-sufficient but not hypoallergenic</p>
+                <figure>
+                    <img src="images/shibainu.jpg" alt="Shiba Inu being a shiba inu (cute)." width="400" height="300">
+                    <figcaption>Shiba Inu being a Shiba Inu (cute).</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="corgi"></a>
+                <h2>Corgi</h2>
+                <h3>Overall Score: 9/10</h3>
+                <p>9/10 because cute and stubby but not hypoallergenic, bonus point for butt that floats</p>
+                <figure>
+                    <img src="images/corgi.jpeg" alt="Corgi being lax." width="400" height="300">
+                    <figcaption>Corgi being lax on a Sunday circa 2004.</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="samoyed"></a>
+                <h2>Samoyed</h2>
+                <h3>Overall Score: 8/10</h3>
+                <p>8/10 because cute and hypoallergenic but sheds too much, bonus point for looking like a lion.</p>
+                <figure>
+                    <img src="images/samoyed.jpeg" alt="Samoyed with glasses being cool." width="400" height="300">
+                    <figcaption>Samoyed with glasses being cool.</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="chihuahua"></a>
+                <h2>Chihuahua</h2>
+                <h3>Overall Score: 3/10</h3>
+                <p>3/10 because likes to bite ankles, snarls, AND not hypoallergenic, bonus points for being portable and weirdly cute.</p>
+                <figure>
+                    <img src="images/chihuahua.jpeg" alt="Chihuahua being sus." width="400" height="300">
+                    <figcaption>Chihuahua being sus.</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="yorkie"></a>
+                <h2>Yorkie</h2>
+                <h3>Overall Score: 6/10</h3>
+                <p>6/10 because cute and silly but not friendly with other dogs, bonus points for fashion sense.</p>
+                <figure>
+                    <img src="images/yorkie.jpg" alt="Yorkie being a rockstar." width="400" height="300">
+                    <figcaption>Yorkie being a rockstar.</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="pug"></a>
+                <h2>Pug</h2>
+                <h3>Overall Score: 7.5/10</h3>
+                <p>7.5/10 because super cute but not hypoallergenic and are very lazy, bonus points for doubling as potato.</p>
+                <figure>
+                    <img src="images/pug.jpeg" alt="Pug Potato." width="400" height="300">
+                    <figcaption>Pugtato</figcaption>
+                </figure>
+            </section>
+            <section>
+                <a name="husky"></a>
+                <h2>Husky</h2>
+                <h3>Overall Score: 8/10</h3>
+                <p>8/10 because super cute and cuddly but not hypoallergenic and sheds a lot.</p>
+                <figure>
+                    <img src="images/husky.jpeg" alt="An inquiring husky." width="400" height="300">
+                    <figcaption>An inquiring husky.</figcaption>
+                </figure>
+            </section>
+        </article>
+    </main>
+    <footer>
+        <p>&copy; 2021 May Johnson</p>
+    </footer>
+   </body>
+</html>
