Adding skeleton styles.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
    <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
       <title>May Johnson's Dog Reviews</title>
    </head>
    <body>
